[metadata]
name = aiddl_common
version = 0.1.0
author = Uwe Köckemann
author_email = uwe.kockemann@oru.se
description = Common Library for the AI Domain Definition Language (AIDDL) Framework for Integrative AI
long_description = file: README.md
long_description_content_type = text/markdown
url = http://www.aiddl.org
project_urls =
    Bug Tracker =  https://github.com/uwe-koeckemann/AIDDL/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = .
