[metadata]
# replace with your username:
name = aiddl_core
version = 1.0.0
author = Uwe Köckemann
author_email = uwe.kockemann@oru.se
description = Utility Library for the AIDDL Framework for Integrative AI
long_description = file: README.org
long_description_content_type = text/markdown
url = https://www.aiddl.org
project_urls =
    Bug Tracker = https://gitsvn-nt.oru.se/uwe.kockemann/aiddl-pub/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src